# rapid

./: .gitignore  CMakeLists.txt~  RAPID  README.md  VideoInfo.xml  camera.xml
Eugene/: BoxSizes.hpp  CMakeLists.txt  Model.cpp  Model.hpp  RAPID.cpp  new1.hpp  out_camera_data.xml
Nickolay/: settings
Nickolay/rapid_incorrect_transformation/: CMakeLists.txt  rapid
Nickolay/rapid_incorrect_transformation/src/: Model.cpp  Rapid.cpp
Nickolay/rapid_with_unchanged_sizes/: CMakeLists.txt  rapid
Nickolay/rapid_with_unchanged_sizes/src/: Model.cpp  Model.hpp  Rapid.cpp
calib_tool/: CMakeLists.txt  camera_calibration.cpp  out_camera_data.xml
frame_grabbing/: CMakeLists.txt  FrameGrabbing.cpp
others/: README
others/matlab_workspace/: read_draw.m
src/: BoxSizes.hpp  CMakeLists.txt  EdgeExtractor.hpp  LineFitting.hpp  LineFittingTests.cpp  Model.cpp  Model.hpp  OutlierDetector.hpp  RAPID.cpp  RAPID.cpp~  RAPIDTracker.cpp  RAPIDTracker.h  RAPIDTracker.hpp  RAPIDTrackerExperiment.hpp  RAPIDTrackerExperiment_all_k_subsets.cpp  RAPIDTrackerExperiment_all_k_subsets.hpp  RAPIDTrackerExperiment_rand_subsets.cpp  RAPIDTrackerExperiment_rand_subsets.hpp  Ransac.cpp  Ransac.hpp  RansacTracker.cpp  RansacTracker.hpp  RapidTesting.cpp  RapidTrackerExperiment.cpp  Tracker.cpp  Tracker.hpp  Util.hpp  UtilTests.cpp  VideoInfo.cpp  VideoInfo.h  VideoInfo.hpp  VideoInfoBase.hpp  new1.hpp  new1.hpp~  test.cpp
video/: test_small_25.MOV
